2022-01-10  Karl Berry  <karl@freefriends.org>

	* am/hitex.am: do not silence tangle-sh.
	(noinst_PROGRAMS): += himktables, so we get Automake's rules
	to build it instead of whatever is predefined in make.
	(EXTRA_PROGRAMS): delete, not needed since all listed in bin_PROGRAMS.
	(hiformat_c_h_l_y): update.
	* hilexer.l,
	* hiparser.y: remove these derived files. We check in the
	.c and .h files instead.

2021-12-17  Luigi Scarso  <luigi.scarso@gmail.com>

	* am/hitex.am (hitables.c): need $(EXEEXT) to execute himktables.
	https://tug.org/pipermail/tlbuild/2021q4/004984.html

2021-12-17  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* hitex.w: Typo.

2021-12-11  Karl Berry  <karl@freefriends.org>

	* am/hitex.am (hishrink_OBJECTS, hitex_OBJECTS): depend on
	$(hiformat_c_h_l_y), so that (hopefully) ctangle is run on
	hiformat.w to generate, e.g., hibasetypes.h before we try to
	compile the programs. E.g.,
	https://tug.org/pipermail/tlbuild/2021q4/004972.html

2021-11-16  Karl Berry  <karl@freefriends.org>

	* am/hitex.am: doc.
	* tests/hello.test,
	* tests/rule.test (OUTDIR): use subdir hitexdir/tests/outdir,
	not hitexdir/tests, to avoid clash of both TeX and Automake
	creating hitexdir/tests/TEST.log files.
	Also, avoid GNU diff-specific options.

2021-10-05  Karl Berry  <karl@freefriends.org>

	* am/hitex.am (AM_YFLAGS): comment out since we aren't doing
	lex/yacc stuff any more.

	(hitex_CPPFLAGS): include -I$(srcdir)/libmd5 for extensions.
	(hi{tex,stretch,shrink}_DEPENDENCIES): define.

2021-10-01  Karl Berry  <karl@freefriends.org>

	* am/hitex.am (nodist_hishrink_SOURCES): remove references to .[ly]
	files; instead list the hishrink-{parser,lexer}.c files explicitly.
	Simpler to eliminate Automake's lex/yacc.
	* hishrink-lexer.l,
	* hishrink-parser.y: remove.

2021-09-28  Karl Berry  <karl@freefriends.org>

	* am/hitex.am (hishrink_SOURCES): specify hishrink-lexer.l
	and hishrink-parser.y as if they were direct sources.