@@ -19,7 +19,8 @@ endif WEB
 EXTRA_DIST += $(web_man_sources)
 web_man_sources = bibtex.man dvicopy.man dvitomp.man dvitype.man gftodvi.man \
 	gftopk.man gftype.man mft.man patgen.man pktogf.man pktype.man \
-	pltotf.man pooltype.man tftopl.man vftovp.man vptovf.man weave.man
+	pltotf.man pooltype.man tftopl.man twill.man \
+	vftovp.man vptovf.man weave.man
 
 if TEX
 man_sources += tex.man
